--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <meta property="og:description" content="Explore and stream music across genres, create playlists, view lyrics, and enjoy advanced analytics for personalized music experience.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://github.com/MEDELBOU3/SM4song/">
-    <meta property="og:image" content="https://github.com/MEDELBOU3/SM4song/path-to-image.jpg">
+    <meta property="og:image" content="https://github.com/MEDELBOU3/SM4song/src/logo.png">
     
     <!-- Twitter Card for Twitter Sharing -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Premium Music Streaming App">
+    <meta name="twitter:title" content="Advanced Music Streaming App">
     <meta name="twitter:description" content="Stream and organize your favorite music with advanced analytics and lyrics.">
-    <meta name="twitter:image" content="https://github.com/MEDELBOU3/SM4song/.jpg">
+    <meta name="twitter:image" content="https://github.com/MEDELBOU3/SM4song/logo.png">
     <meta name="twitter:site" content="@YourTwitterHandle">
     
     <!-- Favicon -->
