--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Description for SEO -->
-<meta name="description" content="Stream diverse music genres, curated playlists, and explore lyrics. Save and like songs with personalized analytics to enhance your listening experience.">
+    <meta name="description" content="Stream diverse music genres, curated playlists, and explore lyrics. Save and like songs with personalized analytics to enhance your listening experience.">
 
 <!-- Keywords for SEO -->
 <meta name="keywords" content="music streaming, playlists, song lyrics, music player, song analytics, Spotify API, save songs, liked songs, artist stats">
@@ -17,17 +17,17 @@
 <meta property="og:description" content="Explore and stream music across genres, create playlists, view lyrics, and enjoy advanced analytics for personalized music experience.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://github.com/MEDELBOU3/SM4song/">
-<meta property="og:image" content="https://github.com/MEDELBOU3/SM4song/src/logo1.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/MEDELBOU3/SM4song/main/src/logo.png">
 
 <!-- Twitter Card for Twitter Sharing -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Advanced Music Streaming App">
 <meta name="twitter:description" content="Stream and organize your favorite music with advanced analytics and lyrics.">
-<meta name="twitter:image" content="https://github.com/MEDELBOU3/SM4song/src/logo.png"> <!-- Corrected URL -->
+<meta name="twitter:image" content="https://raw.githubusercontent.com/MEDELBOU3/SM4song/main/src/logo.png">
 <meta name="twitter:site" content="@YourTwitterHandle"> <!-- Replace with your Twitter handle -->
 
 <!-- Favicon -->
-<link rel="icon" href="https://github.com/MEDELBOU3/SM4song/src/logo.png" type="image/png">
+<link rel="icon" href="https://raw.githubusercontent.com/MEDELBOU3/SM4song/main/favicon.ico" type="image/x-icon">
 
 <!-- Theme Color for Mobile Browsers -->
 <meta name="theme-color" content="#1DB954">
