--- a/index.html
+++ b/index.html
@@ -117,15 +117,13 @@
             overflow-y: auto;
         }
         .logo {
-            font-size: 24px;
-            font-weight: 700;
+            padding: 5px;
             margin-bottom: 30px;
-            color: var(--spotify-white);
             display: flex;
             align-items: center;
         }
-        .logo i {
-            color: var(--spotify-green);
+        .logo img {
+            width: 270px;
             margin-right: 10px;
         }
         .menu-item {
@@ -864,8 +862,7 @@
     <div class="container">
         <div class="sidebar">
             <div class="logo">
-                <i class="fab fa-spotify"></i>
-                SpotifyApp
+                <img src="brandmark.png" class="brandmark">
             </div>
             <div class="menu-item" data-page="home">
                 <i class="fas fa-home"></i>
