--- a/index.html
+++ b/index.html
@@ -118,13 +118,15 @@
         }
         .logo {
             padding: 5px;
+            width: 280px;
             margin-bottom: 30px;
             display: flex;
             align-items: center;
         }
         .logo img {
-            width: 270px;
-            margin-right: 10px;
+            width: 230px;
+            border-radius: 12px;
+            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
         }
         .menu-item {
             padding: 10px 0;
