--- a/index.html
+++ b/index.html
@@ -114,20 +114,42 @@
             width:300px;
             background-color: var(--hover-bg1);
             padding: 26px 20px;
-            overflow-y: auto;
-        }
-        .logo {
-            padding: 5px;
-            width: 280px;
-            margin-bottom: 30px;
             display: flex;
+            flex-direction: column;
             align-items: center;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
+        
+        .logo {
+             padding: 10px;
+             width: 260px;
+             margin-bottom: 30px;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             background: rgba(255, 255, 255, 0.05);
+             border-radius: 15px;
+             box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.3);
+             transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+       .logo:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.5);
+       }
+
         .logo img {
             width: 230px;
             border-radius: 12px;
             box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+            transition: box-shadow 0.3s ease;
+         }
+
+        .logo img:hover {
+            box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.4);
         }
+       
         .menu-item {
             padding: 10px 0;
             cursor: pointer;
