--- a/index.html
+++ b/index.html
@@ -901,8 +901,9 @@
                 Recommended
             </div>
             <div class="menu-item" data-page="News">
-                <i class="fas fa-news"></i>
-                News
+                <a href="news.html" style="text-decoration: none; color: var(--text-color);">
+                    <i class="fas fa-newspaper" style="color: var(--text-color);"></i>News
+                </a>
             </div> 
             <div class="menu-item" data-page="playlist" onclick="openPlaylistModal()">
                 <i class='bx bxs-playlist'></i>
