--- a/news.html
+++ b/news.html
@@ -63,7 +63,9 @@
         }
 
         .logo-img {
-            width: 150px;       
+            width: 130px;   
+            background-color: #ff4081;
+            border-radius: 12px;        
             transition: transform 0.3s ease-in-out;
         }
         
