--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
         }
         #lyricsContainer {
             display: none;
+            background-image: url(https://cdn.pixabay.com/animation/2024/05/02/07/43/07-43-00-535_512.gif);
             position: fixed;
             top: 0;
             right: -350px;
