--- a/index.html
+++ b/index.html
@@ -1356,6 +1356,6 @@
         
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
