--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
             border-top-right-radius: 24px;
             box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.3);
             margin-left: 3rem;
+            border: 1px solid gray;
             padding: 1rem;
             background-color: var(--hover-bg1);
         }
