--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
             background-color: var(--hover-bg);
             padding: 16px 24px;
             display: flex;
+            border-top: 1px solid gray;
             justify-content: space-between;
             align-items: center;
             height: 90px;
