--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
                 Recommended
             </div>
             <div class="menu-item" data-page="News">
-                <a href="news.html" style="text-decoration: none; color: var(--text-color);">
+                <a href="src/news.html" style="text-decoration: none; color: var(--text-color);">
                     <i class="fas fa-newspaper" style="color: var(--text-color);"></i>News
                 </a>
             </div> 
