--- a/src/news.html
+++ b/src/news.html
@@ -478,8 +478,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand animate__animated animate__fadeIn" href="index.html">
-                <img src="SM4song/brandmark.png" alt="logo"  class="logo-img">
+            <a class="navbar-brand animate__animated animate__fadeIn" href="../index.html">
+                <img src="../brandmark.png" alt="logo"  class="logo-img">
             </a>
             <div class="d-flex align-items-center gap-3">
                 <div class="theme-switch" id="themeSwitch" title="Toggle theme"></div>
