--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="playlist.css">
+    <link rel="stylesheet" href="movies.css">
 </head>
 <body>
     <div class="container">
@@ -232,5 +233,6 @@
  
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
+    <script src="movies.js"></script>
 </body>
 </html>
