--- a/index.html
+++ b/index.html
@@ -234,6 +234,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
     <script src="movies.js"></script>
-    <script src="usage-data.js"></script>
+    <script src="src/usage-data.js"></script>
 </body>
 </html>
