--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     
  
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="main.js"></script>
+    <script src="src/Reserve Files/reserve.script.js"></script>
     <script src="movies.js"></script>
     <script src="src/usage-data.js"></script>
 </body>
