--- a/index.html
+++ b/index.html
@@ -235,5 +235,7 @@
     <script src="main.js"></script>
     <script src="movies.js"></script>
     <script src="src/usage-data.js"></script>
+    <script src="src/NewsModal/modal-news.js"></script>
+    <script src="src/weather/weather.js"></script>
 </body>
 </html>
