--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <meta name="keywords" content="music streaming, playlists, song lyrics, music player, song analytics, Spotify API, save songs, liked songs, artist stats">
 
 <!-- Author -->
-<meta name="author" content="Your Name or Company"> <!-- Replace with your name or company -->
+<meta name="author" content="SM.studio"> <!--  name of company -->
 
 <!-- Open Graph for Social Media Sharing -->
-<meta property="og:title" content="Premium Music Streaming App">
+<meta property="og:title" content="SM4music Advanced Music Streaming WebApp">
 <meta property="og:description" content="Explore and stream music across genres, create playlists, view lyrics, and enjoy advanced analytics for personalized music experience.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://github.com/MEDELBOU3/SM4song/">
-<meta property="og:image" content="https://raw.githubusercontent.com/MEDELBOU3/SM4song/brandmark.png">
+<meta property="og:image" content="https://github.com/MEDELBOU3/SM4song/blob/main/brandmark.png">
 
 <!-- Twitter Card for Twitter Sharing -->
 <meta name="twitter:card" content="summary_large_image">
