--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Description for SEO -->
-    <meta name="description" content="Stream diverse music genres, curated playlists, and explore lyrics. Save and like songs with personalized analytics to enhance your listening experience.">
-
-<!-- Keywords for SEO -->
+<!-- Primary Meta Tags -->
+<meta name="description" content="Stream diverse music genres, curated playlists, and explore lyrics. Save and like songs with personalized analytics to enhance your listening experience.">
 <meta name="keywords" content="music streaming, playlists, song lyrics, music player, song analytics, Spotify API, save songs, liked songs, artist stats">
+<meta name="author" content="SM.studio">
 
-<!-- Author -->
-<meta name="author" content="SM.studio"> <!--  name of company -->
 
 <!-- Open Graph for Social Media Sharing -->
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://medelbou3.github.io/SM4song/">
+<meta property="og:title" content="SM4music - Advanced Music Streaming WebApp">
+<meta property="og:description" content="Explore and stream music across genres, create playlists, view lyrics, and enjoy advanced analytics for personalized music experience.">
+<meta property="og:site_name" content="SM4music">
+    
 <meta property="og:title" content="SM4music Advanced Music Streaming WebApp">
 <meta property="og:description" content="Explore and stream music across genres, create playlists, view lyrics, and enjoy advanced analytics for personalized music experience.">
 <meta property="og:type" content="website">
@@ -24,11 +28,13 @@
 <meta name="twitter:title" content="Advanced Music Streaming App">
 <meta name="twitter:description" content="Stream and organize your favorite music with advanced analytics and lyrics.">
 <meta name="twitter:image" content="https://raw.githubusercontent.com/MEDELBOU3/SM4song/brandmark.png">
-<meta name="twitter:site" content="@YourTwitterHandle"> <!-- Replace with your Twitter handle -->
+<meta name="twitter:site" content="@Simo_Elbou3"> <!-- Replace with your Twitter handle -->
 
 <!-- Favicon -->
-<link rel="icon" href="https://raw.githubusercontent.com/MEDELBOU3/SM4song/main/favicon.ico" type="image/x-icon">
-
+<link rel="icon" href="https://raw.githubusercontent.com/MEDELBOU3/SM4song/main/brandmark.png" type="image/png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/MEDELBOU3/SM4song/main/brandmark.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/MEDELBOU3/SM4song/main/brandmark.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/MEDELBOU3/SM4song/main/brandmark.png">
 <!-- Theme Color for Mobile Browsers -->
 <meta name="theme-color" content="#1DB954">
 
@@ -36,8 +42,9 @@
 <link rel="canonical" href="https://github.com/MEDELBOU3/SM4song/">
 
 <!-- Additional Meta Tags for Enhancing SEO -->
+<meta name="language" content="en">
+<meta name="revisit-after" content="7 days">
 <meta name="robots" content="index, follow">
-<meta name="language" content="English">
 <meta name="distribution" content="global">
 
     <title>Enhanced Spotify-like Music App</title>
