--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="og:description" content="Explore and stream music across genres, create playlists, view lyrics, and enjoy advanced analytics for personalized music experience.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://github.com/MEDELBOU3/SM4song/">
-<meta property="og:image" content="https://github.com/MEDELBOU3/SM4song/blob/main/brandmark.png">
+<meta property="og:image" content="https://github.com/MEDELBOU3/SM4song/blob/main/brandmark.png?raw=true">
 
 <!-- Twitter Card for Twitter Sharing -->
 <meta name="twitter:card" content="summary_large_image">
