--- a/index.html
+++ b/index.html
@@ -138,10 +138,12 @@
     </div>
     <div class="player-controls">
         <div class="now-playing">
-            <img id="nowPlayingImg" src="https://via.placeholder.com/56" alt="Now Playing">
-            <div class="now-playing-info">
-                <h3 id="nowPlayingTitle">Track Title</h3>
-                <p id="nowPlayingArtist">Artist Name</p>
+            <div class="playing-msc">
+                <img id="nowPlayingImg" src="https://via.placeholder.com/56" alt="Now Playing">
+                <div class="now-playing-info">
+                   <h3 id="nowPlayingTitle">Track Title</h3>
+                   <p id="nowPlayingArtist">Artist Name</p>
+                </div>
             </div>
             
             <div class="equalizer">
