--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
@@ -58,6 +60,7 @@
     <link rel="stylesheet" href="playlist.css">
     <link rel="stylesheet" href="movies.css">
     <link rel="stylesheet" href="Clr-Extraction & Call Page/theme&layout.css">
+    <link rel="stylesheet" href="conditions/conditions.css">
 </head>
 <body>
      <div id="promo-modal" class="promo-overlay">
@@ -551,12 +554,14 @@
         });
          
     </script>
- 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
     <script src="movies.js"></script>
     <script src="src/usage-data.js"></script>
     <script src="src/NewsModal/News-modal.js"></script>
     <script src="src/weather/weather.js"></script>
+    <script src="conditions/conditions.js"></script>
 </body>
 </html>
