--- a/index.html
+++ b/index.html
@@ -624,6 +624,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
+    <script src="voice-search.js"></script>
     <script src="movies.js"></script>
     <script src="src/usage-data.js"></script>
     <script src="src/NewsModal/News-modal.js"></script>
