--- a/index.html
+++ b/index.html
@@ -754,6 +754,6 @@
     <script src="speed-test/net-meter.js"></script>
     <script src="user/login.js"></script>
     <script src="user/Call/call.js"></script>
-    <script src="user/Call/AgoraRTC_N-4.7.3.js"></script>
+    <script src="user/AgoraRTC_N-4.7.3.js"></script>
 </body>
 </html>
