--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <link rel="stylesheet" href="conditions/conditions.css">
     <link rel="stylesheet" href="speed-test/net-meter.css">
     <link rel="stylesheet" href="user/login.css">
-    <link rel="stylesheet" href="user/Call/call.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="user/Call/call.css">
 </head>
 <body>
      <div id="promo-modal" class="promo-overlay">
@@ -753,7 +753,9 @@
     <script src="conditions/conditions.js"></script>
     <script src="speed-test/net-meter.js"></script>
     <script src="user/login.js"></script>
-    <script src="user/Call/call.js"></script>
-    <script src="user/AgoraRTC_N-4.7.3.js"></script>
+
 </body>
+    <!--<script src="https://download.agora.io/sdk/release/AgoraRTC_N.js"></script>-->
+    <script src="user/Call/call.js"></script>
+    <script src="user/Call/AgoraRTC_N-4.7.3.js"></script>
 </html>
