--- a/index.html
+++ b/index.html
@@ -434,18 +434,20 @@
             <p id="userAge"></p>
             <button class="butn"  onclick="logout()">Logout</button>
         </div>
-    <button id="join-btn">Join Stream</button>
+        
+        <div class="call">
+           <button id="join-btn">Join Stream</button>
+           <div id="stream-wrapper">
+               <div id="video-streams"></div>
 
-    <div id="stream-wrapper">
-        <div id="video-streams"></div>
-
-        <div id="stream-controls">
-            <button id="leave-btn">Leave Stream</button>
-            <button id="mic-btn">Mic On</button>
-            <button id="camera-btn">Camera on</button>
-            <button id="screen-btn">Share Screen</button>
-        </div>
-    </div>
+               <div id="stream-controls">
+                   <button id="leave-btn">Leave Stream</button>
+                   <button id="mic-btn">Mic On</button>
+                   <button id="camera-btn">Camera on</button>
+                   <button id="screen-btn">Share Screen</button>
+               </div>
+            </div>
+         </div>
         
         <div class="playlist-creation">
             <h3>Create a Playlist</h3>
