--- a/index.html
+++ b/index.html
@@ -747,6 +747,7 @@
     <script src="conditions/conditions.js"></script>
     <script src="speed-test/net-meter.js"></script>
     <script src="user/login.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="user/Call/call.js"></script>
 </body>  
 </html>
