--- a/index.html
+++ b/index.html
@@ -748,6 +748,6 @@
     <script src="speed-test/net-meter.js"></script>
     <script src="user/login.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-    <script src="user/Call/call.js"></script>
+    <script src="vars-music.js"></script>
 </body>  
 </html>
