--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <link rel="stylesheet" href="conditions/conditions.css">
     <link rel="stylesheet" href="speed-test/net-meter.css">
     <link rel="stylesheet" href="user/login.css">
+    <link rel="stylesheet" href="user/data.css">
 </head>
 <body>
      <div id="promo-modal" class="promo-overlay">
@@ -159,6 +160,10 @@
                     <i class="fas fa-newspaper" style="color: var(--text-color);"></i>News
                 </a>
             </div> 
+            <div class="menu-item" data-page="settings">
+                <i class="fas fa-cog"></i>
+                Settings
+            </div>
             <div class="menu-item" data-page="playlist" onclick="openPlaylistModal()">
                 <i class='bx bxs-playlist'></i>
                 My list
@@ -746,6 +751,7 @@
     <script src="conditions/conditions.js"></script>
     <script src="speed-test/net-meter.js"></script>
     <script src="user/login.js"></script>
+    <script src="user/data.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="vars-music.js"></script>
 </body>  
