--- a/index.html
+++ b/index.html
@@ -776,5 +776,6 @@
     <script src="user/data.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="vars-music.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>  
 </html>
