--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <link rel="stylesheet" href="speed-test/net-meter.css">
     <link rel="stylesheet" href="user/login.css">
     <link rel="stylesheet" href="user/data.css">
+    <link rel="stylesheet" href="banner/banner.css">
 </head>
 <body>
      <div id="promo-modal" class="promo-overlay">
@@ -839,6 +840,7 @@
     <script src="user/data.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="vars-music.js"></script>
+    <script src="banner/banner.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>  
 </html>
