--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <link rel="stylesheet" href="speed-test/net-meter.css">
     <link rel="stylesheet" href="user/login.css">
     <link rel="stylesheet" href="user/data.css">
-    <link rel="stylesheet" href="banner/banner.css">
+    <link rel="stylesheet" href="banner/dashboard.css">
 </head>
 <body>
      <div id="promo-modal" class="promo-overlay">
@@ -240,69 +240,7 @@
 
     </div>
 
-     <div class="advanced-banner">
-        <div class="resize-handle"></div>
-        <button class="banner-close"><i class="fas fa-times"></i></button>
-        
-        <div class="banner-content">
-            <div class="section track-info">
-                <h3>Track Information</h3>
-                <div class="track-detail">
-                    <h4>Album</h4>
-                    <p id="albumName">-</p>
-                </div>
-                <div class="track-detail">
-                    <h4>Release Date</h4>
-                    <p id="releaseDate">-</p>
-                </div>
-                <div class="track-detail">
-                    <h4>Genre</h4>
-                    <p id="genre">-</p>
-                </div>
-                <div class="track-detail">
-                    <h4>Label</h4>
-                    <p id="label">-</p>
-                </div>
-                <div class="track-detail">
-                    <h4>Lyrics</h4>
-                    <div id="lyrics">Loading lyrics...</div>
-                </div>
-            </div>
-
-            <div class="section">
-                <h3>You May Also Like</h3>
-                <div id="relatedTracksList">
-                    <!-- Related tracks will be populated here -->
-                </div>
-            </div>
-
-            <div class="section">
-                <h3>Track Stats</h3>
-                <div class="stats-grid">
-                    <div class="stat-item">
-                        <i class="fas fa-play"></i>
-                        <span class="value" id="playCount">-</span>
-                        <span class="label">Plays</span>
-                    </div>
-                    <div class="stat-item">
-                        <i class="fas fa-heart"></i>
-                        <span class="value" id="likeCount">-</span>
-                        <span class="label">Likes</span>
-                    </div>
-                    <div class="stat-item">
-                        <i class="fas fa-chart-bar"></i>
-                        <span class="value" id="popularity">-</span>
-                        <span class="label">Popularity</span>
-                    </div>
-                    <div class="stat-item">
-                        <i class="fas fa-clock"></i>
-                        <span class="value" id="duration">-</span>
-                        <span class="label">Duration</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <div id="lyricsContainer" class="lyrics-container">
         <h2>Lyrics</h2>
         <div id="lyricsContent">
@@ -840,7 +778,7 @@
     <script src="user/data.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="vars-music.js"></script>
-    <script src="banner/banner.js"></script>
+    <script src="banner/dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>  
 </html>
